syntax = "proto3";
package node;

message GetVersionMessage { 
    string body = 1;
}

message GetVersionResponse {
    string body = 1;
}

service NodeService {
    rpc PrintDir(GetVersionMessage) returns (GetVersionResponse) {}
}